# social-media-risk-assessment

./: README.md  pyproject.toml
src/pii_risk/: __main__.py  schema.py
src/pii_risk/data/: __init__.py  loader.py
src/pii_risk/ingest/: mastodon.py  reddit.py
src/pii_risk/ml/: features.py
tests/: test_ingest_mastodon.py  test_ingest_reddit.py  test_ml_smoke.py
